--- a/Minecraft custom/bukkit.yml
+++ b/Minecraft custom/bukkit.yml
@@ -1,2 +1,2 @@
 settings:
-  shutdown-message: '[Flatnode] The server will be closed now!'
+  shutdown-message: "[RealityNode] Deze server is zojuist afgesloten || Contacteer de server eigenaar indien er een probleem is!"
