--- a/Minecraft custom/paper.yml
+++ b/Minecraft custom/paper.yml
@@ -1,5 +1,5 @@
 messages:
   kick:
-    authentication-servers-down: ''
-    flying-player: '&8[&bFlatnode&8] Flying is not enabled! If you use cheats set is off!'
-    flying-vehicle: '&8[&bFlatnode&8] Flying is not enabled! If you use cheats set is off!'
+    authentication-servers-down: ""
+    flying-player: "&8[&3RealityNode&8] Flying is not enabled! If you use cheats set is off!"
+    flying-vehicle: "&8[&3RealityNode&8] Flying is not enabled! If you use cheats set is off!"
